--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>games</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <h1>game website</h1>
     <h2>amazing games for all the family</h2>
 
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum accusamus veritatis consequuntur quo reiciendis
+        placeat in, laborum animi? Magni minima est iure quod cumque, necessitatibus officia sit. Saepe provident nam
+        consequatur quo illum amet obcaecati rerum commodi ipsum magni ab culpa, harum vitae modi eius laudantium
+        distinctio deserunt recusandae minima.</p>
+
 </body>
+
 </html>
