adding home image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
         consequatur quo illum amet obcaecati rerum commodi ipsum magni ab culpa, harum vitae modi eius laudantium
         distinctio deserunt recusandae minima.</p>
 
+        <div class="container">
+    <img class="home-image" src="asset/img/c5527f47-def9-433c-9cce-23f286dbfea2_Front.webp">
+</div>
 </body>
 
 </html>
