adding diff colors

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         <div class="container">
     <img class="home-image" src="asset/img/c5527f47-def9-433c-9cce-23f286dbfea2_Front.webp">
+     <br><a href="https://www.fortnite.com/?lang=en-US">other website</a>
 </div>
 </body>
 
