bug fix + style

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     <h1>game website</h1>
     <h2>amazing games for all the family</h2>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum accusamus veritatis consequuntur quo reiciendis
-        placeat in, laborum animi? Magni minima est iure quod cumque, necessitatibus officia sit. Saepe provident nam
-        consequatur quo illum amet obcaecati rerum commodi ipsum magni ab culpa, harum vitae modi eius laudantium
-        distinctio deserunt recusandae minima.</p>
+    <p>best gaming website ever</p>
 
         <div class="container">
     <img class="home-image" src="asset/img/c5527f47-def9-433c-9cce-23f286dbfea2_Front.webp">
